--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,13 @@
  * limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ch.hslu.vsk24fs.g08</groupId>
     <artifactId>g08-documentation</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
     <packaging>pom</packaging>
 
     <name>g08-documentation</name>
@@ -54,8 +55,12 @@
     </developers>
 
     <scm>
-        <connection>scm:git:https://${scm.developer.uid}@gitlab.switch.ch/hslu/edu/bachelor-computer-science/vsk/${scm.group.name}/${project.artifactId}.git</connection>
-        <developerConnection>scm:git:ssh://git@gitlab.switch.ch/hslu/edu/bachelor-computer-science/vsk/${scm.group.name}/${project.artifactId}.git</developerConnection>
+        <connection>
+            scm:git:https://${scm.developer.uid}@gitlab.switch.ch/hslu/edu/bachelor-computer-science/vsk/${scm.group.name}/${project.artifactId}.git
+        </connection>
+        <developerConnection>
+            scm:git:ssh://git@gitlab.switch.ch/hslu/edu/bachelor-computer-science/vsk/${scm.group.name}/${project.artifactId}.git
+        </developerConnection>
         <url>https://gitlab.switch.ch/${scm.group.name}/${project.artifactId}/tree/develop</url>
         <tag>HEAD</tag>
     </scm>
@@ -242,15 +247,15 @@
                             <backend>pdf</backend>
                             <attributes>
                                 <icons>font</icons>
-                                <pagenums />
-                                <toc />
-                                <idprefix />
+                                <pagenums/>
+                                <toc/>
+                                <idprefix/>
                                 <idseparator>-</idseparator>
                             </attributes>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>        
+            </plugin>
         </plugins>
     </build>
 
