--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>ch.hslu.vsk24fs.g08</groupId>
     <artifactId>g08-documentation</artifactId>
-    <version>3.0.0</version>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>g08-documentation</name>
